add orderform, add repair gold payment